--- a/my-portfolio/src/Components/About/About.css
+++ b/my-portfolio/src/Components/About/About.css
@@ -1,5 +1,5 @@
 /* General styles */
-.about {
+ .about {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,27 +8,25 @@
     height: 100vh; /* Full viewport height */
     padding: 40px 20px; /* Reduced margin to fit full window height */
     box-sizing: border-box;
-  }
+ }
   
   .about-title {
     position: relative;
-    text-align: center;
   }
   
   .about-title h1 {
     padding: 0;
-    font-size: 48px; /* Adjusted to fit better */
+    font-size: 80px; /* Adjusted to fit better */
     font-weight: 600;
-    margin-bottom: 20px;
+    
   }
   
   .about-title img {
     position: absolute;
-    bottom: -20px; /* Adjusted for better placement */
-    right: -20px;
+    bottom: 0; /* Adjusted for better placement */
+    right: 0;
     z-index: -1;
-    width: 100px; /* Adjust size as needed */
-    height: auto;
+    
   }
   
   /* Section styles */
@@ -48,7 +46,7 @@
   
   .about-left img {
     border-radius: 15px; /* Changed to create a rectangle frame with rounded corners */
-    height: 300px; /* Adjust height as needed */
+    height: 410px; /* Adjust height as needed */
     width: 300px; /* Adjust width as needed */
     object-fit: cover;
     object-position: center;
@@ -59,6 +57,7 @@
   
   .about-left img:hover {
     transform: scale(1.05); /* Enlarge image slightly on hover */
+    border: 4px solid rgb(187, 52, 180);
   }
   
   .about-right {
